# bombadil

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  flake.nix  issue.md  logic.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: contributing.md  route-interceptor-spec.md
docs/development/: AGENTS.md  contributing.md  launch.json
docs/manual/: Makefile  default.nix
docs/manual/src/: 01-introduction.md  02-getting-started.md  03-specification-language.md  04-reference.md  admonitions-example.md  admonitions.lua  base.css  bash-prompt.lua  code-nav.lua  inline-code-size.lua  layout.css  metadata.yaml  style.css  syntax.css  template.html  toc-toggle.js
experiments/trace-graph/: d3_dag.py
lib/bombadil/: Cargo.toml  build.rs
lib/bombadil-browser-keys/: Cargo.toml
lib/bombadil-cli/: Cargo.toml  build.rs
lib/bombadil-cli/src/: debug_server.rs  duration.rs  inspect_server.rs  main.rs  render.rs  test_server.rs
lib/bombadil-debug-api/: Cargo.toml
lib/bombadil-debug-ui/: Cargo.toml  index.html
lib/bombadil-debug-ui/src/: lib.rs
lib/bombadil-inspect/: Cargo.toml  Trunk.toml  index.html
lib/bombadil-inspect-api/: Cargo.toml
lib/bombadil-inspect-api/src/: lib.rs  markup.rs
lib/bombadil-inspect/src/: actions.css  actions.rs  base.css  colors.css  container_size.rs  details.css  duration.rs  layout.css  lib.rs  list_autoscroll.rs  render.rs  screenshot.rs  scrollbar.css  state-details.css  state_details.rs  svg.rs  tables.css  time.rs  timeline.css  timeline.rs  typography.css
lib/bombadil-inspect/test/: inspect.spec.ts  tsconfig.json
lib/bombadil-ltl/: Cargo.toml
lib/bombadil-ltl/src/: eval.rs  formula.rs  lib.rs  ltl.rs  ltl_equivalences.rs  ltl_snapshot_tests.rs  stop.rs  syntax.rs  violation.rs
lib/bombadil-schema/: Cargo.toml
lib/bombadil-schema/src/: duration.rs  lib.rs  markup.rs  schema.rs  text.rs
lib/bombadil-terminal/: Cargo.toml
lib/bombadil-terminal/src/: main.rs
lib/bombadil/proptest-regressions/specification/: ltl_equivalences.txt
lib/bombadil/src/: browser.rs  geometry.rs  lib.rs  runner.rs  styled.rs
lib/bombadil/src/browser/: actions.rs  state.rs
lib/bombadil/src/instrumentation/snapshots/: bombadil__instrumentation__js__tests__instrument_source_code_if.snap
lib/bombadil/src/snapshots/: bombadil__styled__tests__all_inline.snap  bombadil__styled__tests__always_implies_eventually.snap  bombadil__styled__tests__bounded_always.snap  bombadil__styled__tests__bounded_eventually.snap  bombadil__styled__tests__complex_snapshots.snap  bombadil__styled__tests__invariant_violation.snap  bombadil__styled__tests__mixed.snap  bombadil__styled__tests__next_violation.snap  bombadil__styled__tests__or_with_temporal_operators.snap  bombadil__styled__tests__release_with_prior_and_current_snapshots.snap  bombadil__styled__tests__until_test_ended_with_snapshots.snap  bombadil__styled__tests__until_timed_out_with_snapshots.snap  bombadil__styled__tests__until_with_prior_and_current_snapshots.snap
lib/bombadil/src/specification/: actions.ts  convert.rs  defaults.ts  domain.rs  global.d.ts  index.ts  internal.ts  js.rs  ltl.rs  ltl_equivalences.rs  ltl_snapshot_tests.rs  mod.rs  random.ts  render.rs  resolver.rs  snapshots.rs  stop.rs  syntax.rs  tsconfig.json  verifier.rs  worker.rs
lib/bombadil/src/specification/bundler/: mod.rs
lib/bombadil/src/specification/bundler/fixtures/runtime/: b.ts  sideEffect.ts
lib/bombadil/src/specification/bundler/fixtures/snapshot/: cjs-test.ts  import-attributes-test.ts
lib/bombadil/src/specification/bundler/fixtures/snapshot/subdirectory/: shared.ts
lib/bombadil/src/specification/bundler/snapshots/: bombadil__specification__bundler__tests__bundle.snap  bombadil__specification__bundler__tests__bundle_commonjs.snap
lib/bombadil/src/specification/defaults/: actions.ts  properties.ts
lib/bombadil/src/trace/: mod.rs  writer.rs
lib/integration-tests/: Cargo.toml
lib/integration-tests/tests/: integration_tests.rs
lib/integration-tests/tests/file-download/: index.html  testfile
lib/integration-tests/tests/file-picker/: index.html
lib/integration-tests/tests/until-release/: index.html
lib/nix/: default.nix  npm-package.nix  types.nix
lib/release/: .envrc  changelog.py  colors.py  default.nix  git.py  main.py  pyrightconfig.json  release.py  shell.py  ui.py  versions.py
nix/: Cargo.nix  default.nix  docker.nix  executable.nix  types.nix
proptest-regressions/specification/: ltl.txt  ltl_equivalences.txt
src/: browser.rs  build.rs  instrumentation.rs  lib.rs  main.rs  proxy.rs  runner.rs  state_machine.rs  tree.rs  tsconfig.json  url.rs
src/browser/: actions.rs  actions.ts  evaluation.rs  hegel.rs  instrumentation.rs  random.rs  state.rs
src/browser/actions/: clicks.js  clicks.ts  hegel.rs  inputs.js  inputs.ts  random.rs  scrolls.ts
src/experiments/typescript-ltl/: README.md  bombadil.ts  eval.test.ts  eval.ts  example.test.ts  example.ts  package.json  (+2 more)
src/instrumentation/: html.rs  js.rs
src/snapshots/: antithesis_browser__instrumentation__tests__instrument_source_code_if.snap  antithesis_browser__instrumentation__tests__instrument_source_code_if_else.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_assignment.snap  antithesis_browser__instrumentation__tests__instrument_source_code_ternary_comma_operator.snap
src/specification/: actions.ts  bombadil_exports.rs  bundler.rs  defaults.ts  extractors.rs  index.ts  internal.ts  js.rs  ltl.rs  ltl_equivalences.rs  mod.rs  module_loader.rs  random.ts  random_test.rs  render.rs  resolver.rs  result.rs  stop.rs  tsconfig.json  verifier.rs  worker.rs
src/trace/: mod.rs  writer.rs
tests/: integration_tests.rs
tests/extractor-exception/: index.html
tests/extractor-guard/: index.html
tests/links/: b.html  c.html
tests/time-extractor/: spec.ts
tests/uncaught-exception/: index.html
tests/unhandled-promise-rejection/: index.html
(+39 files in other folders)
