[workspace]
members = [
    "lib/bombadil",
    "lib/bombadil-cli",
    "lib/bombadil-inspect-api",
    "lib/bombadil-inspect",
    "lib/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
