[workspace]
members = [
    "lib/bombadil",
    "lib/bombadil-browser-keys",
    "lib/bombadil-cli",
    "lib/bombadil-schema",
    "lib/bombadil-inspect",
    "lib/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
