[package]
name = "bombadil-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bombadil"
path = "src/main.rs"

[dependencies]
bombadil = { path = "../bombadil" }
bombadil-inspect-api = { path = "../bombadil-inspect-api" }
anyhow = "1.0"
axum = "0.8.8"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
include_dir = "0.7.4"
log = "0.4"
mime_guess = "2.0"
open = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.22.0"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
