[package]
name = "bombadil-debug-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
