[package]
name = "bombadil-inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "DomRectReadOnly",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlImageElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Window",
] }
gloo-net = "0.6"
gloo-console = "0.3"
gloo-timers = "0.3"
bombadil-browser-keys = { path = "../bombadil-browser-keys" }
bombadil-schema = { path = "../bombadil-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
