[package]
name = "bombadil-inspect"
version = "0.1.0"
edition.workspace = true

[dependencies]
bombadil-browser-keys = { path = "../bombadil-browser-keys" }
bombadil-schema = { path = "../bombadil-schema" }
gloo-console.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "DomRectReadOnly",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlImageElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Window",
] }
yew = { workspace = true, features = ["csr"] }

[lib]
crate-type = ["cdylib"]
