[package]
name = "bombadil-terminal"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bombadil-terminal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bombadil = { path = "../bombadil" }
bombadil-browser-keys = { path = "../bombadil-browser-keys" }
bombadil-schema = { path = "../bombadil-schema" }
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
include_dir = "0.7.4"
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "419972e1796030e83fc6adcb673fb10725e9fa12", default-features = false, features = [
  "link-static",
] }
log = "0.4"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
portable-pty = "0.9.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.22.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
indoc = "2.0.7"
insta = "1.43.1"
proptest = "1.10.0"

[build-dependencies]
glob = "0.3.3"
