[package]
name = "bombadil"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "bombadil"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bit-set = { version = "0.8", features = ["serde"] }
chromiumoxide = "0.8.0"
const_format = "0.2.35"
futures = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
include_dir = "0.7.4"
log = "0.4.29"
oxc = { version = "0.112.0", features = ["codegen", "semantic", "transformer"] }
oxc_traverse = "0.112.0"
oxc_resolver = "11.19.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.22.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
url = { version = "2.5.7", features = ["serde"] }
html5ever = "0.36.1"
bytes = "1.11.0"
base64 = "0.22.1"
markup5ever_rcdom = "0.36.0"
boa_engine = "0.21.0"
bombadil-browser-keys = { path = "../bombadil-browser-keys" }

[dev-dependencies]
indoc = "2.0.7"
insta = "1.43.1"
proptest = "1.10.0"

[build-dependencies]
glob = "0.3.3"
