[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bombadil = { path = "../bombadil" }
bombadil-schema = { path = "../bombadil-schema" }
anyhow = "1.0"
axum = "0.8.8"
env_logger = "0.11.8"
indoc = "2.0.7"
insta = "1.43.1"
log = "0.4"
proptest = "1.10.0"
tempfile = "3.15.0"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
url = "2.5.7"
